--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Logo-variant-dark (2).png" />
+    <link rel="icon" type="image/svg+xml" href="/Logo-variant-light.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bell's-visual</title>
   </head>
-  <body>
+  <body class="bg-primary font-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
